[package]
name = "sns-login-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
dotenvy = "0.15.7"
reqwest = "0.11.27"
serde = {version = "1.0.197", features = ["derive"]}
serde_json = "1.0.114"
tokio = {version = "1.36.0", features = ["full"]}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[[bin]]
name = "naver"
path = "src/naver_login.rs"


[[bin]]
name = "kakao"
path = "src/kakao_login.rs"

[[bin]]
name = "google"
path = "src/google_login.rs"
